--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@ bing_verify:
 links:
   - title: Curriculum
     url: /cv/
-  - title: Publications
-    url: /publications/
-  - title: Code
-    url: /code/
+  # - title: Publications
+  #   url: /publications/
+  # - title: Code
+  #   url: /code/
   - title: Blog
     url: /blog/
 
