--- a/_config.yml
+++ b/_config.yml
@@ -27,14 +27,15 @@ bing_verify:
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: Curriculum
+  - title: Blog
+    url: /blog/
+  - title: CV
     url: /cv/
   # - title: Publications
   #   url: /publications/
   # - title: Code
   #   url: /code/
-  - title: Blog
-    url: /blog/
+  
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Kolkata
