Configure images in files

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:  "https://bhavnicksm.github.io"
 # Owner/author information
 owner:
   name:           "Bhavnick Minhas"
-  avatar:         "images/website-images/bhavnick.png"
+  avatar:         "website-images/bhavnick.png"
   bio:            "From Delhi, India. Passionate about NLP, Speech Processing and AI taking over the world"
   email:          "bhavnicksm@gmail.com"
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
